--- a/Evoly/intro.html
+++ b/Evoly/intro.html
@@ -11,6 +11,7 @@
 
 <body>
     <div class="container">
+        <div class="redpin"><img src="media/pin.png" alt="" width="100px" height="100px"></div>
         <div class="container-firstpart">
             <div><img src="media/cloud.png" alt=""></div>
             <div>
